# CMake-Assignment

./: CMakeLists.txt  README.md
data/: output.ply
src/: main.cpp
